Complete translation to Bulgarian Fixed minor security issue when deleting user Fixed an autocompletition issue when editing users Fixed truncating problem when using multibyte characters Added login by email in addition to login by username Remove some more calls to session_is_registred in favour of isset($_SESSION)

--- a/language/bg/lng.conf
+++ b/language/bg/lng.conf
@@ -190,34 +190,39 @@ search = Търсене
 searchfor = Търсене за
 searching = Търсене...
 searchitem = Търси точка
-ar = Arabian
-bg = Bulgarian
-ca = Catalan
-zh = Chinese
-cs = Czech
-da = Danish
-de = German
-en = English
-es = Spanish
-gl = Galician
-fi = Finnish
-fr = French
-hu = Hungarian
-it = Italian
-ja = Japanese
-lt = Lithuanian
-nl = Dutch
-nn =
-pl = Polish
-pt = Portuguese
-pt_br = Portuguese (Brasil)
-ro = Romanian
-sr = Serbian
-ru = Russian
-se = Swedish
-sk = Slovak
-tr = Turkish
-uk = Ukranian
+
+al = Албански
+ar = Арабски
+bg = Български
+ca = Катала
+cn = Китайски
+cz = Чешки
+da = Датски
+de = Немски
+gr = Гръдски
+en = Английски
+es = Испански
+es_gl = Галисийски
+fi = Финландски
+fr = Френски
+hu = Унграски
+it = Италиянски
+jp = Японско
+lt = Литовски
+nl = Холандски
+nor = Норвежки
+pl = Полски
+pt = Португалски
+pt_br = Бразилски
+ro = Румънски
+rs = Сръбски
+ru = Руски
+se = Шведски
+sk = Словашки
+tr = Турски
+ua = Украински
+cn = Китайски
+
 calendar = Календар
 dateformat = Формат за дата
 timezone = Часова зона
