--- a/language/en/lng.conf
+++ b/language/en/lng.conf
@@ -218,35 +218,37 @@ searchitem = Search item
 
 {* Languages *}
 
+al = Albanian
 ar = Arabic
 bg = Bulgarian
 ca = Catalan
-zh = Chinese
-cs = Czech
+cn = Chinese
+cz = Czech
 da = Danish
 de = German
-el = Greek
+gr = Greek
 en = English
 es = Spanish
-gl = Galician
+es_gl = Galician
 fi = Finnish
 fr = French
 hu = Hungarian
 it = Italian
-ja = Japanese
+jp = Japanese
 lt = Lithuanian
 nl = Dutch
-nn = Norwegian
+nor = Norwegian
 pl = Polish
 pt = Portuguese
 pt_br = Portuguese (Brazilian)
 ro = Romanian
-sr = Serbian
+rs = Serbian
 ru = Russian
 se = Swedish
 sk = Slovak
 tr = Turkish
-uk = Ukranian
+ua = Ukranian
+cn = Chinese
 
 {* Calendar *}
 
